[package]
name = "breakout"
version = "0.1.0"
authors = ["Rachel K <raech.kanati@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 1
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"
incremental = true
codegen-units = 16
rpath = false

[dependencies]
pcg_rand  = "0.11"
rand      = "0.7"
rand_core = "0.5"

[dependencies.ggez]
version = "0.5"
default-features = false

